# lifeos

./: .gitattributes  .gitignore  .gitleaksignore  .mcp.json  .windsurfrules  AGENTS.md  AUDIT.md  Architecture_Data_Pipeline_Blueprint_RUVECTOR_FULLY_EXPANDED_VERIFIED.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  ENVIRONMENT-cloud-session.md  HANDOFF.md  README.md  RTK.md  SESSIONS.md  TODO.md  colors_and_type.css  data.js  index.html  lifeos_app.css  package.json  single-profile-migration.receipt.20260721T024201394036642Z.json  single-profile-migration.receipt.20260723T152433853021380Z.json  styles.css  tsconfig.json  vite.config.ts  vitest.a11y.config.ts  vitest.config.ts  yazilix-nix-isolated-persistant.md
.atc/: config.toml
.atc/components/: base.md  code-read.md  code-write.md  constraints.md  create-task.md  git.md  github.md  kb-read.md  kb-write.md  refine.md  review.md  web.md
.atc/directives/: close.toml  create-task.toml  implement.toml  pr-comments.toml  refine.toml  research.toml  review-fix.toml
.atc/partials/: github-comments.md  rebase.md  review.md  verify.md
.atc/skills/: atc-reference.md  dispatch.md  monitor.md
.atc/templates/: branch-review.md  close.md  commit-message.md  doc-edit.md  pr-comment.md  swot.md  (+2 more)
.beads/: config.yaml  issues.jsonl
.cargo/: config.toml
.claude/: README.md  settings.json
.github/: actionlint.yaml
.omc/: project-memory.json
.playwright-mcp/: page-2026-05-25T06-12-41-657Z.yml
Claude-vite-bundle/: Bundle the whole repo.md  verifyhandoff.sh
blueprint-gap-audit/: closure.md  inventory.md  verify.mjs
crates/lifeos-core/: Cargo.toml
crates/lifeos-core/migrations/: 0001_accounts.sql  0002_mempalace.sql  0003_ruvector.sql  0004_projection_state.sql
crates/lifeos-core/sql/: bootstrap-postgres-ruvector.sql
crates/lifeos-core/src/: auth.rs  lib.rs  plugin.rs  types.rs
crates/lifeos-core/src/mcp/: cognitum.rs  mod.rs  ruvector.rs
crates/lifeos-core/src/storage/: accounts.rs  error.rs  legacy_sqlite.rs  mempalace.rs  mod.rs  ruvector.rs  state.rs
crates/lifeos-daemon/: Cargo.toml  README.md
crates/lifeos-daemon/.cargo/: config.toml
crates/lifeos-daemon/src/: main.rs
design-system-reference/: AGENTS.md  README.md  SKILL.md  sot.md
firmware/esp32/: Cargo.toml  README.md  rust-toolchain.toml
firmware/esp32/.cargo/: config.toml
firmware/esp32/src/: main.rs
fonts/: AGENTS.md
org-chart/: CIRO_AGENT.md
planning-spine-v0/: 00_NORTH_STAR.md  01_OBJECT_MODEL.md  02_AUTHORITY_GRAPH.md  03_TASK_GRAPH_SCHEMA.md  04_WORLDSEED_SCHEMA.md  05_HERMETIC_CELL_CONTRACT.md  06_PROOF_LEDGER.md  07_MVP_VERTICAL_SLICE.md  08_EXECUTION_GATES.md  09_OPEN_QUESTIONS.md  ENVCTL_DB_NU_PLUGIN_MIGRATION_PACKAGE.md  ENVCTL_DB_NU_PLUGIN_MIGRATION_SECURITY_REVIEW.md  EXECUTION_STATUS.md  README.md  test_failure_state_reconciliation.py  test_preserve_artifacts.py  test_proof_corrections.py  test_proof_ledger_conflicts.py  test_reproducible_generation.py  test_schema_compatibility.py
public/: AGENTS.md
reports/: apply-kb-upgrades.py  audit-section-coverage.py  blueprint-task-crosscheck.md  blueprint-task-graph.tsv  build-task-graph.py  create-kb-tasks.py  existing-tasks-baseline.tsv  extract-part1.psv  extract-part2a.psv  extract-part2b.psv  extract-part3.psv  gen-task-drafts.py
scripts/: agentdb-rvf-lifecycle.mjs  boot-reattach.mjs  canonicalize-icns.py  causal-authorization-lifecycle.mjs  check-durable-not-on-run.mjs  check-home-owned-owners.mjs  check-metavar-not-in-containers.mjs  cold-reboot-harness.mjs  db-coordinator-lifecycle.mjs  design-diff.allow  design-diff.mjs  dirty-shutdown-recovery.mjs  enumerate-runtime-env.mjs  envelope-latency-bench.mjs  git-hooks-blocked  host-control-plane.mjs  ingest-architecture-blueprint-icm.mjs  learning-boundary-lifecycle.mjs  mincut-swarm-isolation.mjs  os-update-observer.mjs  resolve-pkg-config.sh  ruflo-coordinator-lifecycle.mjs  ruvllm-inference-lifecycle.mjs  ruvltra-routing-lifecycle.mjs  swarm-scale-harness.mjs  verify-figma-sidebar-companion.mjs  verify-nbverify004-claim001.mjs  verify-nbverify004-claim002.mjs  verify-nbverify004-claim005.mjs  verify-nbverify004-claim006.mjs  verify-nbverify004-claim007.mjs  verify-nbverify004-claim008.mjs  verify-nbverify004-claim009.mjs  verify-nbverify004-claim010.mjs  verify-nbverify004-claim011.mjs  verify-nbverify004-claim012.mjs  verify-nbverify004-claim013.mjs  verify-nbverify004-claim014.mjs  verify-nbverify004-claims005-007.mjs  verify-nbverify004-progress.mjs  (+4 more)
src/: AGENTS.md  App.vue  main.ts  shims-vue.d.ts
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/.omc/sessions/: 3bf94666-66a8-433e-bdd7-25e9e23f4fd9.json
src-tauri/.omc/state/sessions/3bf94666-66a8-433e-bdd7-25e9e23f4fd9/: hud-state.json
src-tauri/capabilities/: AGENTS.md  default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  auth.rs  lib.rs  main.rs
tests/: AGENTS.md  App-auth-gate.spec.js  Badge.spec.js  CalendarView.spec.js  CommandPalette.spec.js  ContactsView.spec.js  Dashboard.spec.js  FilesView.spec.js  HealthView.spec.js  Icon.spec.js  IoTView.spec.js  KeyboardHelp.spec.js  Lights.spec.js  Login.spec.js  MenuRow.spec.js  NotificationsDrawer.spec.js  SettingsView.spec.js  Sidebar.spec.js  SubsectionAndFlow.spec.js  TelemetryWidget.spec.js  Toasts.spec.js  Workspace.spec.js  archbp-007-agentdb-rvf-lifecycle.spec.ts  archbp-008-ruvllm-inference-lifecycle.spec.ts  archbp-009-learning-boundary-lifecycle.spec.ts  archbp-010-swarm-scale-harness.spec.ts  archbp-013-ruvltra-routing-lifecycle.spec.ts  archbp-014-ruflo-coordinator-lifecycle.spec.ts  archbp-015-mincut-swarm-isolation.spec.ts  archbp-016-witness-chain-lifecycle.spec.ts  archbp-017-causal-authorization-lifecycle.spec.ts  archbp-021-portable-release.spec.ts  archbp-046-db-coordinator-lifecycle.spec.ts  archbp-058-two-brother-model.spec.ts  archbp-059-tier-map.spec.ts  archbp-060-kernel-boundary.spec.ts  archbp-061-invariant-ledger.spec.ts  archbp-062-conformance-tests.spec.ts  archbp-063-failure-modes.spec.ts  archbp-064-ratify-spec.spec.ts  (+69 more)
(+1391 files in other folders)
